# ReleaseMCP

./: .gitignore  AGENTS.md  README.md  pyproject.toml  server.py
docs/: architecture.md
src/apache_incubator_releases_mcp/: __init__.py  protocol.py  releases.py  schemas.py  tools.py
tests/: fixtures.py  test_parser.py  test_protocol.py  test_tools.py
